--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "roboto-fontface": "0.8.0",
     "rxjs": "5.5.0",
     "socicon": "3.0.5",
+    "sweetalert2": "^7.2.0",
     "tether": "1.4.0",
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
